--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://Bhaskar:Ashoksur@cluster0-ghisa.azure.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://S538362:1234fake@cluster0-qhch7.azure.mongodb.net/local_library?retryWrites=true&w=majority
